--- a/package.json
+++ b/package.json
@@ -39,6 +39,11 @@
     ]
   },
   "devDependencies": {
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.18.3",
+    "eslint-plugin-react-hooks": "^1.7.0",
     "faker": "^4.1.0"
   }
 }
