--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "react-virtuoso": "^0.16.4",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "typeface-roboto": "0.0.75"
