--- a/package.json
+++ b/package.json
@@ -13,14 +13,18 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.19.2",
     "clsx": "^1.0.4",
+    "faker": "^4.1.0",
     "jss-rtl": "^0.3.0",
     "lodash": "^4.17.15",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
+    "react-resize-detector": "^4.2.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
+    "react-sizeme": "^2.6.12",
+    "react-virtualized-auto-sizer": "^1.0.2",
     "react-virtuoso": "^0.16.4",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
