--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.2",
     "jss-rtl": "^0.3.0",
     "material-table": "^1.54.2",
+    "material-ui-snackbar-provider": "^1.3.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
