--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "redux": "^4.0.5",
-    "redux-saga": "^1.1.3",
-    "styled-components": "^5.1.1"
+    "redux-saga": "^1.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
