--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-sizeme": "^2.6.12",
     "react-virtualized-auto-sizer": "^1.0.2",
     "react-virtuoso": "^0.16.4",
+    "react-window": "^1.8.5",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
     "typeface-roboto": "0.0.75"
