--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-window": "^1.8.5",
     "redux": "^4.0.5",
     "redux-saga": "^1.1.3",
-    "typeface-roboto": "0.0.75"
+    "typeface-roboto": "0.0.75",
+    "uniqid": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
